--- a/my_new_django_app/job_list/templates/add_job.html
+++ b/my_new_django_app/job_list/templates/add_job.html
@@ -2,4 +2,6 @@
     {% csrf_token %}
     {{ form.as_p }}
     <input type='submit' value='Create'>
-</form>
+    </form>
+</br>
+<a href="{% url 'job-list' %}">Back</a>
