--- a/my_new_django_app/new_app/templates/blog_post_page.html
+++ b/my_new_django_app/new_app/templates/blog_post_page.html
@@ -1,5 +1,7 @@
-<h3>{{ blog_post.title }}</h1>
+<h3>{{ blog_post.title }}</h3>
 <p>{{ blog_post.content }}</p1>
 <br>
 <br>
-<a href='/recent/'>Back</a>
+<a href='{% url 'edit-blog-post' blog_post.id %}'>Edit this post</a>
+</br>
+<a href='{% url 'recent' %}'>Back</a>
