--- a/my_new_django_app/job_list/templates/job_detail.html
+++ b/my_new_django_app/job_list/templates/job_detail.html
@@ -1,4 +1,12 @@
-<h1>{{job_post.title}}</h1>
-<p>{{job_post.job_description}}</p>
-</br>
-<a href="{% url 'job-list' %}">Back</a>
+{% if user.username %}
+    <h5>Current user: {{ user.username }}</h5>
+    <button onclick="window.location.href='{% url "logout" %}'">Log Out</button>
+    <h1>{{job_post.title}}</h1>
+    <p>{{job_post.job_description}}</p>
+    </br>
+    <button onclick="window.location.href='{% url "edit-job" job_post.id %}'">Edit this job</button>
+    <button onclick="window.location.href='{% url "delete-job" job_post.id %}'">Delete this job</button>
+    <button onclick="window.location.href ='{% url "job-list" %}'">Back to Job List</button>
+{% else %}
+    <p>You are not authorised to see this page! Go to <a href="{% url 'login' %}">login</a> page</p>
+{% endif %}
